# best-rent-barcelona

./: README.md
data-getter/: config.py  criminal_data.py  pyproject.toml  rent_costs.py
