[tool.poetry]
name = "data-getter"
version = "0.1.0"
description = ""
authors = ["Dmitrii Kolosov <dmitrii.kolosov@semrush.com>"]
readme = "README.md"
packages = [{include = "data_getter"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
requests-html = "^0.10.0"
selenium = "^4.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
